--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,20 @@
-::selection{ background-color: #E13300; color: white; }
-::moz-selection{ background-color: #E13300; color: white; }
-::webkit-selection{ background-color: #E13300; color: white; }
-
 body {
     font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-    color: #888;
+    color: #000000;
     font-style: normal;
-    font-size: 14px;
-    line-height: 22px;
+    font-size: 15px;
+    line-height: 20px;
 }
 
 a {
-    color: #003399;
+    color: #66ba58;
     background-color: transparent;
     font-weight: normal;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .title {
