--- a/static/style.css
+++ b/static/style.css
@@ -72,7 +72,7 @@ form label{
     display: block;
     margin-bottom: 5px;
 }
-form input[type=text]{
+form input{
     border: 1px solid #aaa;
     border-radius: 2px;
     box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
@@ -105,3 +105,11 @@ form input[type=submit]{
     cursor: pointer;
     text-align: center;
 } 
+
+.invalid input:required:invalid {
+    background: #BE4C54;
+}
+
+.invalid input:required:valid {
+    background: #17D654 ;
+}
