--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Registration Success</title>
-        <link rel=stylesheet type=text/css href="../static/style.css">
+        <link rel=stylesheet type=text/css href={{ url_for('static', filename='style.css') }}>
     </head>
     <body>
         <p>Congratulations, {{first_name}}!</p>
