--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>Register with W+K Cycle</title>
-        <link rel=stylesheet type=text/css href="../static/style.css">
-        <script src='../static/js/jquery-1.11.1.min.js' />
-        <script src='../static/js/modernizr.custom.02011.js' />
-        <script src='../static/js/js-webshim/minified/polyfiller.js' />
+        <link rel=stylesheet type=text/css href="/static/style.css">
+        <script src='/static/js/jquery-1.11.1.min.js' />
+        <script src='/static/js/modernizr.custom.02011.js' />
+        <script src='/static/js/js-webshim/minified/polyfiller.js' />
         <script>jQuery.webshims.polyfill('forms');</script>
     </head>
     <body>
