--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Register with W+K Cycle</title>
-        <link rel=stylesheet type=text/css href="/static/style.css">
+        <link rel=stylesheet type=text/css href="../static/style.css">
         <script src='/static/js/jquery-1.11.1.min.js' />
         <script src='/static/js/modernizr.custom.02011.js' />
         <script src='/static/js/js-webshim/minified/polyfiller.js' />
@@ -14,7 +14,7 @@
             </div>
             <div id="content">
 
-                <form class="validate-form" method="post" action="/">
+                <form class="validate-form" method="post" action="/register">
                   <label>Name</label>
                   <input type="text" placeholder="First" name="first_name" required />
                   <input type="text" placeholder="Last" name="last_name" required /> <br />
