--- a/app/static/style.css
+++ b/app/static/style.css
@@ -17,12 +17,6 @@ a:hover {
     text-decoration: underline;
 }
 
-.title {
-    padding: 0 20px;
-    background: #32373a;
-    position: relative;
-    height: 50px;
-}
 
 h1 {
     color: #fff;
@@ -48,8 +42,23 @@ code {
     zoom: 1;
 }
 
+
 #body{
     margin: 0 15px 0 15px;
+}
+
+
+#container{
+    margin: 10px;
+    border: 1px solid #D0D0D0;
+    -webkit-box-shadow: 0 0 8px #D0D0D0;
+}
+
+.title {
+    padding: 0 16px;
+    background: #32373a;
+    position: relative;
+    height: 50px;
 }
 
 p.footer{
@@ -61,13 +70,61 @@ p.footer{
     margin: 20px 0 0 0;
 }
 
-#container{
-    margin: 10px;
-    border: 1px solid #D0D0D0;
-    -webkit-box-shadow: 0 0 8px #D0D0D0;
+div.logo {
+    text-align: center;
 }
 
-/* Form Styles */
+div.view {
+    font-size: 20px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+div.next {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+div.period {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    display: inline;
+    padding: 0 10px;
+}
+
+/* table */
+
+table {
+    width: 100%;
+    border: 1px solid black;
+}
+
+td {
+    text-align: center;
+}
+
+tr.titles > td {
+    padding: 10px 0;
+}
+
+tr.items > td {
+    padding: 3px 0;
+}
+
+tr:nth-child(even) {background: #f3f3f3}
+tr:nth-child(odd) {background: #ffffff}
+
+/* form */
 form label{
     display: block;
     margin-bottom: 5px;
