register page style changes

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <div id="container">
-            <div class="title">
-                <h1>Register with W+K Cycle</h1>
+            <div class="nav">
+              <h1>Register with W+K Cycle</h1>
             </div>
             <div id="content">
 
