--- a/app/static/style.css
+++ b/app/static/style.css
@@ -20,11 +20,11 @@ a:hover {
 
 
 h1 {
-    color: #fff;
+    /*color: #fff;*/
     margin: 0;
     font-size: 18px;
     font-weight: 400;
-    line-height: 50px;
+    line-height: 30px;
     text-transform: capitalize;
 }
 
@@ -52,13 +52,6 @@ code {
     margin: 0px;
 }
 
-.title {
-    padding: 0 16px;
-    background: #32373a;
-    position: relative;
-    height: 50px;
-}
-
 p.footer{
     text-align: right;
     font-size: 11px;
@@ -68,7 +61,7 @@ p.footer{
     margin: 20px 0 0 0;
 }
 
-div.register {
+div.nav {
     padding: 10px 0 10px 10px;
     margin-bottom: 20px;
     border-bottom: 1px solid #e0e0e0;
@@ -110,26 +103,46 @@ li {
 /* table */
 
 table {
-    width: 85%;
+    width: 90%;
     margin:0px auto;
     border: 1px solid #D0D0D0;
     -webkit-box-shadow: 0 0 8px #D0D0D0;
 }
 
+th {
+    text-align: right;    
+    padding: 10px 10px 10px 10px;
+    /*margin-right: 20px;*/
+}
+
+
 td {
-    text-align: center;
-}
-
-tr.titles > td {
-    padding: 10px 0;
-}
-
-tr.items > td {
-    padding: 3px 0;
+    text-align: right;
+    /*margin-right: 20px;*/
+    padding: 3px 10px 3px 10px;
 }
 
 tr:nth-child(even) {background: #f3f3f3}
 tr:nth-child(odd) {background: #whitesmoke}
+
+
+/* tablesorter */
+
+th.headerSortUp { 
+    background-image: url('/static/assets/asc.gif');
+}
+
+th.headerSortDown { 
+    background-image: url('/static/assets/desc.gif');
+}
+
+th.header { 
+    /*background-image: url('/static/assets/bg.gif');*/
+    cursor: pointer; 
+    background-repeat: no-repeat; 
+    background-position: center left;
+}
+
 
 /* form */
 form label{
@@ -144,27 +157,27 @@ form input{
     padding: 5px;
     margin-bottom: 20px;
     outline: 0;
-    -webkit-border-radius: 2px;
+/*    -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);*/
 }
 form input[type=submit]{
-    background: #198ad1;
+    background: #66ba58;
     color: #fff;
     display: inline-block;
     padding: 0 20px;
     font-size: 16px;
     line-height: 2.6em;
     font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-    font-weight: 400;
-    -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);
-    -moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);
-    box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    text-transform: capitalize;
+    /*font-weight: 400;*/
+    /*-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);*/
+    /*-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);*/
+    /*box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);*/
+    /*-webkit-border-radius: 2px;*/
+    /*-moz-border-radius: 2px;*/
+    /*border-radius: 2px;*/
+    /*text-transform: capitalize;*/
     border: 0;
     cursor: pointer;
     text-align: center;
