--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-    color: #66ba58;
+    color: #66cc66;
     background-color: transparent;
     font-weight: normal;
     text-decoration: none;
@@ -20,7 +20,6 @@ a:hover {
 
 
 h1 {
-    /*color: #fff;*/
     margin: 0;
     font-size: 18px;
     font-weight: 400;
@@ -109,17 +108,27 @@ table {
     -webkit-box-shadow: 0 0 8px #D0D0D0;
 }
 
+tr {
+    text-align: right;
+}
+
 th {
-    text-align: right;    
     padding: 10px 10px 10px 10px;
-    /*margin-right: 20px;*/
 }
 
 
 td {
+    border-right: 1px solid #D0D0D0;
     text-align: right;
-    /*margin-right: 20px;*/
     padding: 3px 10px 3px 10px;
+}
+
+tbody td {
+    padding-right: 22px;
+}
+
+td:last-child {
+    border-right: none;
 }
 
 tr:nth-child(even) {background: #f3f3f3}
@@ -140,44 +149,34 @@ th.header {
     /*background-image: url('/static/assets/bg.gif');*/
     cursor: pointer; 
     background-repeat: no-repeat; 
-    background-position: center left;
+    background-position: center right;
 }
 
 
 /* form */
 form label{
+    font-size: 16px;
     display: block;
     margin-bottom: 5px;
 }
+
 form input{
     border: 1px solid #aaa;
-    border-radius: 2px;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-    box-sizing: border-box;
+    font-size: 14px;
     padding: 5px;
     margin-bottom: 20px;
     outline: 0;
-/*    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);*/
+    font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+    -webkit-appearance: none;
 }
+
 form input[type=submit]{
-    background: #66ba58;
+    background: #66cc66;
     color: #fff;
     display: inline-block;
     padding: 0 20px;
     font-size: 16px;
     line-height: 2.6em;
-    font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-    /*font-weight: 400;*/
-    /*-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);*/
-    /*-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);*/
-    /*box-shadow: inset 0 -1px 0 rgba(0,0,0,.1);*/
-    /*-webkit-border-radius: 2px;*/
-    /*-moz-border-radius: 2px;*/
-    /*border-radius: 2px;*/
-    /*text-transform: capitalize;*/
     border: 0;
     cursor: pointer;
     text-align: center;
