--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -7,7 +7,7 @@
         <script type="text/javascript">
           $(document).ready(function() 
           {
-            $("#leader").tablesorter({sortInitialOrder: 'desc', sortList:[[4,1]]}); 
+            $("#leader").tablesorter({sortInitialOrder: 'desc', sortList:[[4,1], [5,1]]}); 
           });
         </script>
     </head>
