--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -16,7 +16,7 @@
                   <input type="text" placeholder="First" name="first_name" required />
                   <input type="text" placeholder="Last" name="last_name" required /> <br />
                   <label>Email</label>
-                  <input type="email" size="47" name="email_address" required /><br />
+                  <input type="text" pattern="[a-zA-Z0-9._-]+" size="36" name="email_address" required />@wk.com<br />
                   <input type="submit" value="Register">
                 </form>
                 <script>
