--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>W+K Cycle Leaderboard</title>
+        <title>Cycle Leaderboard</title>
         <link rel="stylesheet" type="text/css" href="../static/style.css" />
         <script src="../static/js/jquery-1.11.1.min.js"></script>
         <script src="../static/js/jquery.tablesorter.min.js"></script>
