--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>W+K Cycle Admin</title>
+        <title>Cycle Admin</title>
         <link rel="stylesheet" type="text/css" href="../static/style.css" />
     </head>
     <body>
