--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Register with W+K Cycle</title>
+        <title>Register with Cycle</title>
         <link rel="stylesheet" type="text/css" href="../static/style.css">
         <script src="../static/js/jquery-1.11.1.min.js"></script>
     </head>
@@ -10,7 +10,7 @@
               <a href={{ url_for('.index') }}>&#8636; back</a>
             </div>
             <div id="content">
-                <h1>Register with W+K Cycle</h1>
+                <h1>Register with Cycle</h1>
                 <form method="post" action="/register">
                   <label>Name</label>
                   <input type="text" placeholder="First" name="first_name" required />
