--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -23,7 +23,7 @@
         </div>
         <div id="content">
             <div class="logo">
-              <a href="/"><img src="../static/assets/logo-100px.gif" /></a>
+              <a href="/"><img width="256" src="../static/assets/logo1.png" /></a>
             </div>
             <div class="view">
               <ul>
@@ -57,7 +57,7 @@
             <tr class="items">
                 <td>
                 {% if entry.new_user == true or entry.new_user == 'True' %} <img src="../static/assets/icon-new-user.gif" /> {% endif %} 
-                {{ entry.name }} 
+                {{ entry.name }}
                 </td>
                 <td>{{ entry.miles }} </td>
                 <td>{{ entry.duration_str }} </td>
